--- a/EP_Quest/Views/Quest/Index.cshtml
+++ b/EP_Quest/Views/Quest/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿<div class="quest-container">
     <div class="character-container">
+        @(await Html.RenderComponentAsync<Character>(RenderMode.ServerPrerendered))
     </div>
     <div class="note-container">
         @(await Html.RenderComponentAsync<Note>(RenderMode.ServerPrerendered))
