--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
+    <base href="~/" />
     <link href="css/main.css" rel="stylesheet">
-    <link href="~/EP_Quest.styles.css" rel="stylesheet" />
+    <link href="EP_Quest.styles.css" rel="stylesheet" />
 </head>
 <body>
     <div class="main">
