--- a/EP_Quest/wwwroot/css/main.scss
+++ b/EP_Quest/wwwroot/css/main.scss
@@ -1,6 +1,7 @@
 ﻿html {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -19,6 +20,28 @@ body {
     background: linear-gradient(#1d709c, #000b39);
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #00add4;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #00add4;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #0096B8;
+}
+
 $sapling: #f9ecd0;
 $space: #2d363f;
 $cream: #fff9e6;
@@ -32,7 +55,7 @@ $cream: #fff9e6;
 .circle {
     border-radius: 50%;
     position: absolute;
-    z-index: 12;
+    z-index: 4;
 }
 
 @for $i from 1 through 31 {
@@ -155,6 +178,21 @@ $cream: #fff9e6;
     overflow: hidden;
     border-radius: 10px;
     flex-grow: 1.5;
+}
+
+.nav-button {
+    font-family: "Anime Ace v3";
+    font-size: 24px;
+    padding: 0.5rem 1rem;
+    color: white;
+    cursor: pointer;
+    background: none;
+    border: 2px solid #30b0cd;
+    border-radius: 5px;
+
+    &:hover {
+        background-color: #30b0cd;
+    }
 }
 
 @font-face {
