--- a/EP_Quest/Components/Note.razor
+++ b/EP_Quest/Components/Note.razor
@@ -4,9 +4,9 @@
 
 <div class="@_instructionRotation">
     <div class="front-side">
-        <span class="instruction-container @_currentNoteOpacity">
-            @_instruction
-        </span>
+        <div class="instruction-container @_currentNoteOpacity">
+            @((MarkupString)_instruction)
+        </div>
         <div class="buttons-container">
             <button id="back-button" class="nav-button" style="visibility: @_backButtonVisibility" @onclick="ToPreviousPage">Back</button>
             <button id="next-button" class="nav-button" @onclick="ToNextPage">@_nextButtonText</button>
@@ -14,10 +14,11 @@
     </div>
     <div class="back-side">
         <div class="cards">
-            @foreach (var step in Enum.GetValues<StepNumbers>())
+            @for (var i = 0; i < Enum.GetValues<StepNumbers>().Length; i++)
             {
+                var step = Enum.GetValues<StepNumbers>()[i];
                 var stepNumber = step.ToString().ToUpper();
-                <div class="card" @onmouseover="() => ShowStepDescription((int)step)">@stepNumber</div>
+                <div class="card @_cards[i]" @onmouseover="() => HoverCard((int)step)" @onmouseout="() => HoverCard(-1)" @onclick="() => SelectStep((int)step)">@stepNumber</div>
             }
         </div>
         <div class="description-section">
@@ -51,17 +52,21 @@
     private int _instructionIndex;
     private string _instruction = string.Empty;
     private List<Step> _steps;
+    private string[] _cards = new string[8];
     private string _stepDescription = string.Empty;
     private string _currentNoteOpacity = "transparent-block";
     private string _backButtonVisibility = "hidden";
     private string _nextButtonText = "Next";
     private bool _canStartQuest;
+    private int _focusedCard = -1;
+    private string _selectedCard = "selected-card";
+    private string _selectedCardDescription = "";
     private string _instructionRotation = "";
 
     protected override async Task OnInitializedAsync()
     {
-        _instructions = await Repository.Instructions.ToArrayAsync();
-        _steps = await Repository.Steps.ToListAsync();
+        _instructions = await Repository.Instructions.OrderBy(instruction => instruction.Id).ToArrayAsync();
+        _steps = await Repository.Steps.OrderBy(instruction => instruction.Id).ToListAsync();
         _currentNoteOpacity = "visible-block";
 
         if (_instructions.Length > 0)
@@ -117,10 +122,29 @@
         await Task.Delay(200);
         _currentNoteOpacity = "visible-block";
     }
-    private void ShowStepDescription(int index)
+    private void HoverCard(int index)
     {
+        if (index == -1)
+        {
+            _stepDescription = _focusedCard != -1 ? _steps.FirstOrDefault(step => step.Id == _focusedCard + 1)
+                .Description : string.Empty;
+            return;
+        }
+
+        var stepId = index + 1;
+        Step? step = _steps.FirstOrDefault(step => step.Id == stepId);
+        _stepDescription = step != null ? step.Description : "***";
+    }
+    private void SelectStep(int index)
+    {
+        if (_focusedCard != -1)
+            _cards[_focusedCard] = string.Empty;
+
+        _focusedCard = index;
+        _cards[_focusedCard] = "selected-card";
         var stepId = index + 1;
         var step = _steps.FirstOrDefault(step => step.Id == stepId);
-        _stepDescription = step != null ? step.Description : string.Empty;
+        _selectedCardDescription = step != null ? step.Description : string.Empty;
+        HoverCard(index);
     }
 }
