--- a/EP_Quest/Components/Note.razor.css
+++ b/EP_Quest/Components/Note.razor.css
@@ -1,143 +1,155 @@
 ﻿.instruction-container {
-  margin: 1.5rem 0.5rem;
-  padding: 0 1rem;
-  max-height: 75%;
-  overflow: auto;
+    height: 100%;
+    margin: 1.5rem 0.5rem;
+    padding: 0 1rem;
+    max-height: 75%;
+    overflow: auto;
 }
 
 .front-side,
 .back-side {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-  backface-visibility: hidden;
-  transition: transform 0.8s linear;
-}
-.front-side > .buttons-container,
-.back-side > .buttons-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 2rem 2rem;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    backface-visibility: hidden;
+    transition: transform 0.8s linear;
 }
 
+    .front-side > .buttons-container,
+    .back-side > .buttons-container {
+        display: flex;
+        justify-content: space-between;
+        padding: 2rem 2rem;
+    }
+
 .front-side {
-  transform: perspective(1800px) rotateY(0);
+    transform: perspective(1800px) rotateY(0);
 }
 
 .back-side {
-  transform: perspective(1800px) rotateY(180deg);
+    transform: perspective(1800px) rotateY(180deg);
 }
 
 .rotate > .front-side {
-  transform: perspective(1800px) rotateY(-180deg);
+    transform: perspective(1800px) rotateY(-180deg);
 }
 
 .rotate > .back-side {
-  transform: perspective(1800px) rotateY(0deg);
+    transform: perspective(1800px) rotateY(0deg);
 }
 
 .transparent-block {
-  opacity: 0;
+    opacity: 0;
 }
 
 .visible-block {
-  opacity: 1;
-  transition: all 2s;
+    opacity: 1;
+    transition: all 2s;
 }
 
 /**************************************/
 .cards {
-  margin: 1.5rem 0.5rem;
-  padding: 0 1rem;
-  overflow: auto;
-  display: grid;
-  gap: 1rem;
+    margin: 1.5rem 0.5rem;
+    padding: 0 1rem;
+    overflow: auto;
+    display: grid;
+    gap: 1rem;
 }
 
 .card {
-  background: rgba(1, 15, 61, 0.2);
-  color: white;
-  height: 8rem;
-  position: relative;
-  border-radius: 5px;
+    background: rgba(1, 15, 61, 0.2);
+    color: white;
+    height: 8rem;
+    position: relative;
+    border-radius: 5px;
 }
 
-.card:hover {
-  box-sizing: border-box;
-  border: 4px solid #00add4;
-  cursor: pointer;
-}
+    .card:hover {
+        box-sizing: border-box;
+        border: 4px solid #00add4;
+        cursor: pointer;
+    }
 
-.card::before {
-  z-index: -1;
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("images/lock.png");
-  background-size: 100px 100px;
+    .card::before {
+        z-index: -1;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100px;
+        height: 100px;
+        background-image: url("images/lock.png");
+        background-size: 100px 100px;
+    }
+
+.selected-card {
+    box-sizing: border-box;
+    border: 4px solid #00add4;
 }
 
 @media (min-width: 600px) {
-  .cards {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (min-width: 900px) {
-  .cards {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-.description-section {
-  min-height: 12rem;
-  margin: 1rem 1rem;
-  padding: 1rem 0;
-  background: rgba(1, 15, 61, 0.2);
-  border-radius: 5px;
-  font-size: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.description-section > .buttons-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-.description-section > .buttons-container .brush-back-button:before {
-  position: absolute;
-  bottom: 2rem;
-  left: 2.5rem;
-  z-index: 10;
-  content: "";
-  width: 4.5rem;
-  height: 3.125rem;
-  background-image: url("images/brush-arrow.svg");
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  background-size: 4.5rem 3.125rem;
-}
-.description-section > .buttons-container .brush-back-button:hover:before {
-  cursor: pointer;
-  left: 2.125rem;
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
+@media (min-width: 900px) {
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.description-section {
+    min-height: 12rem;
+    margin: 1rem 1rem;
+    padding: 1rem 0;
+    background: rgba(1, 15, 61, 0.2);
+    border-radius: 5px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+    .description-section > .buttons-container {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+        .description-section > .buttons-container .brush-back-button:before {
+            position: absolute;
+            bottom: 2rem;
+            left: 2.5rem;
+            z-index: 10;
+            content: "";
+            width: 4.5rem;
+            height: 3.125rem;
+            background-image: url("images/brush-arrow.svg");
+            -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);
+            background-size: 4.5rem 3.125rem;
+        }
+
+        .description-section > .buttons-container .brush-back-button:hover:before {
+            cursor: pointer;
+            left: 2.125rem;
+        }
+
 .description-text {
-  display: block;
-  max-height: 7.5rem;
-  margin: 0 1rem 0 0;
-  padding: 0 1rem;
-  overflow: auto;
+    display: block;
+    max-height: 7.5rem;
+    margin: 0 1rem 0 0;
+    padding: 0 1rem;
+    overflow: auto;
 }
 
 .description-section button:hover {
-  background-color: #00add4;
+    background-color: #00add4;
 }
