--- a/EP_Quest/Components/Note.razor.scss
+++ b/EP_Quest/Components/Note.razor.scss
@@ -1,4 +1,5 @@
 ﻿.instruction-container {
+    height: 100%;
     margin: 1.5rem 0.5rem;
     padding: 0 1rem;
     max-height: 75%;
@@ -85,6 +86,10 @@
     height: 100px;
     background-image: url('images/lock.png');
     background-size: 100px 100px;
+}
+
+.selected-card {
+    border: 4px solid #00add4;
 }
 
 @media (min-width: 600px) {
