Refactoring progress of the information component

--- a/EP_Quest/Views/Quest/Index.cshtml
+++ b/EP_Quest/Views/Quest/Index.cshtml
@@ -3,6 +3,6 @@
         @(await Html.RenderComponentAsync<Character>(RenderMode.ServerPrerendered))
     </div>
     <div class="note-container">
-        @(await Html.RenderComponentAsync<Note>(RenderMode.ServerPrerendered))
+        @(await Html.RenderComponentAsync<Information>(RenderMode.ServerPrerendered))
     </div>
 </div>
