--- a/EP_Quest/Components/Dashboard.razor.scss
+++ b/EP_Quest/Components/Dashboard.razor.scss
@@ -67,7 +67,7 @@
 .description-section {
     min-height: 12rem;
     margin: 1rem 1rem;
-    padding: 1rem 0;
+    padding: 1rem 1rem;
     background: rgba(1, 15, 61, 0.2);
     border-radius: 5px;
     font-size: 20px;
