--- a/EP_Quest/Components/Dashboard.razor
+++ b/EP_Quest/Components/Dashboard.razor
@@ -63,6 +63,13 @@
 
     protected override void OnInitialized()
     {
+        Init();
+    }
+    public void Init()
+    {
+        _stepDescription = string.Empty;
+        _selectedStep = default;
+        _playButtonVisibility = "hidden";
         _steps = Repository.Steps.Select(x => new Step(x)).ToList();
     }
     private void HoverCard(bool isOver, Step step = default)
@@ -81,7 +88,7 @@
     }
     private void SelectCard(int stepNumber)
     {
-        var isSelection = false;
+        var mask = 1;
 
         for (int i = 0; i < _steps.Count; i++)
         {
@@ -89,19 +96,21 @@
             {
                 _steps[i] = new Step(_steps[i].Get(), string.Empty);
                 _selectedStep = default;
-                isSelection = true;
+                mask <<= 2;
                 continue;
             }
 
             if (_steps[i].GetNumber() == stepNumber)
             {
+
                 _steps[i] = new Step(_steps[i].Get(), "selected-step");
                 _selectedStep = _steps[i];
                 _playButtonVisibility = _selectedStep.IsLocked() ? "hidden" : "visible";
+                mask <<= 3;
             }
         }
 
-        if (isSelection)
+        if (mask == 4)
         {
             _playButtonVisibility = "hidden";
             _selectedStep = default;
