--- a/EP_Quest/Components/Home/Index.razor.css
+++ b/EP_Quest/Components/Home/Index.razor.css
@@ -1,11 +1,11 @@
-﻿.greeting-title {
+﻿.home-title {
   margin-top: 2rem;
 }
 
 a {
-  display: block;
   width: 12rem;
   height: 3rem;
+  margin: 1rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,12 +17,10 @@ a {
   position: relative;
   transition: all 0.35s;
 }
-
 a span {
   position: relative;
   z-index: 2;
 }
-
 a:after {
   position: absolute;
   content: "";
@@ -33,12 +31,10 @@ a:after {
   background: #00add4;
   transition: all 0.35s;
 }
-
 a:hover {
   color: white;
   cursor: pointer;
 }
-
 a:hover:after {
   width: 100%;
 }
