--- a/EP_Quest/Components/Quest/Internal/Information.razor
+++ b/EP_Quest/Components/Quest/Internal/Information.razor
@@ -1,4 +1,5 @@
-﻿<div class="@_side">
+﻿@using EP_Quest.Components.Quest.Internal
+<div class="@_side">
     <div class="instruction-side" style="visibility: @_instructionsVisibility">
         <Instruction @ref="_instructionComponent" ToDashboard="FromInstructionsToDashboard"></Instruction>
     </div>
