--- a/EP_Quest/_Imports.razor
+++ b/EP_Quest/_Imports.razor
@@ -6,3 +6,4 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using EP_Quest.Components
