--- a/EP_Quest/wwwroot/css/main.scss
+++ b/EP_Quest/wwwroot/css/main.scss
@@ -10,7 +10,7 @@ body {
     margin: auto;
 }
 
-.main {
+main {
     width: 100%;
     height: 100%;
     color: white;
@@ -166,12 +166,15 @@ $cream: #fff9e6;
 
 /********* End particle Animation Styles ***********/
 
-
-.greeting-container {
+.home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 8rem;
+}
+
+.greeting-card-container {
+
 }
 
 .quest-container {
@@ -180,22 +183,6 @@ $cream: #fff9e6;
     display: flex;
     justify-content: space-between;
     gap: 2rem;
-}
-
-.character-container {
-    background: rgba(1, 15, 61, 0.2);
-    border: 2px solid #00add4;
-    border-radius: 10px;
-    flex-grow: 1;
-}
-
-.note-container {
-    position: relative;
-    background: rgba(1, 15, 61, 0.2);
-    border: 2px solid #00add4;
-    overflow: hidden;
-    border-radius: 10px;
-    flex-grow: 1.5;
 }
 
 .nav-button {
