--- a/EP_Quest/Components/GreetingCard/Index.razor.css
+++ b/EP_Quest/Components/GreetingCard/Index.razor.css
@@ -1,4 +1,26 @@
 ﻿#render-canvas {
+  position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 2;
+}
+.overlay .text-container {
+  position: relative;
+  width: 100%;
+  margin: 2rem 16rem;
+  padding: 1rem 2rem;
+  background-color: rgba(0, 173, 212, 0.1);
+  border-radius: 10px;
+}
+.overlay .text-container #printed-text {
+  font-size: 24px;
+  line-height: 32px;
 }
