--- a/EP_Quest/Components/Home/Index.razor.css
+++ b/EP_Quest/Components/Home/Index.razor.css
@@ -1,7 +1,13 @@
 ﻿.home-title {
   margin-top: 2rem;
+  font-size: 2rem;
 }
 
+@media (max-width: 767px) {
+  .home-title {
+    font-size: 2.5rem;
+  }
+}
 a {
   width: 12rem;
   height: 3rem;
@@ -19,7 +25,6 @@ a {
 }
 a span {
   position: relative;
-  z-index: 2;
 }
 a:after {
   position: absolute;
@@ -37,4 +42,10 @@ a:hover {
 }
 a:hover:after {
   width: 100%;
+}
+@media (max-width: 767px) {
+  a {
+    font-size: 28px;
+    height: 4rem;
+  }
 }
