--- a/EP_Quest/Components/Home/Index.razor.scss
+++ b/EP_Quest/Components/Home/Index.razor.scss
@@ -1,5 +1,12 @@
 ﻿.home-title {
     margin-top: 2rem;
+    font-size: 2rem;
+}
+
+@media (max-width: 767px) {
+    .home-title {
+        font-size: 2.5rem;
+    }
 }
 
 a {
@@ -19,7 +26,6 @@ a {
 
     span {
         position: relative;
-        z-index: 2;
     }
 
     &:after {
@@ -40,5 +46,10 @@ a {
 
     &:hover:after {
         width: 100%;
+    }
+
+    @media (max-width: 767px) {
+        font-size: 28px;
+        height: 4rem;
     }
 }
