--- a/EP_Quest/Components/GreetingCard/Index.razor.scss
+++ b/EP_Quest/Components/GreetingCard/Index.razor.scss
@@ -1,21 +1,30 @@
 ﻿#render-canvas {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
 
 .overlay {
+    box-sizing: border-box;
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    padding: 2rem 12rem;
     display: flex;
     justify-content: center;
-    z-index: 2;
+    z-index: 4;
 
     .text-container {
+        box-sizing: border-box;
         position: relative;
+        top: 0;
+        left: 0;
         width: 100%;
-        margin: 2rem 16rem;
+        height: 100%;
         padding: 1rem 2rem;
         background-color: rgba(0, 173, 212, 0.1);
         border-radius: 10px;
