--- a/EP_Quest/Components/Home/Index.razor.css
+++ b/EP_Quest/Components/Home/Index.razor.css
@@ -25,6 +25,7 @@ a {
 }
 a span {
   position: relative;
+  z-index: 2;
 }
 a:after {
   position: absolute;
@@ -33,7 +34,7 @@ a:after {
   left: 0;
   width: 0;
   height: 100%;
-  background: #00add4;
+  background-color: #00add4;
   transition: all 0.35s;
 }
 a:hover {
