--- a/EP_Quest/Components/Home/Index.razor.scss
+++ b/EP_Quest/Components/Home/Index.razor.scss
@@ -26,6 +26,7 @@ a {
 
     span {
         position: relative;
+        z-index: 2;
     }
 
     &:after {
@@ -35,7 +36,7 @@ a {
         left: 0;
         width: 0;
         height: 100%;
-        background: #00add4;
+        background-color: #00add4;
         transition: all .35s;
     }
 
